<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="5dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    app:layout_goneMarginEnd="8dp"
    android:background="@color/white"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="16sp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/title"
        android:layout_below="@id/id"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/description"
        android:layout_below="@id/title"
        android:text="@string/description"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>